# -

./:  LICENSE  .gitignore  CGameTraceManager.hpp  CMakeLists.txt  DebugOut.hpp  PlayerHelper.hpp  README.md  dll_main.cpp
appMain/: CMakeLists.txt  main.cpp
core/: CS2.cpp  CS2.hpp
datatypes/: math.h  matrix.h  qangle.h  vector.cpp  vector.h
features/: Aimbot.hpp  BHop.hpp
hooks/: CreateMove.cpp  CreateMove.hpp  IHook.h  SilentAimHook.cpp  SilentAimHook.hpp
output/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.rs  buttons.cs  buttons.hpp  buttons.rs  client_dll.cs  client_dll.hpp  client_dll.rs  engine2_dll.cs  engine2_dll.hpp  engine2_dll.rs  host_dll.cs  host_dll.hpp  host_dll.rs  info.json  interfaces.cs  interfaces.hpp  interfaces.rs  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  networksystem_dll.cs  networksystem_dll.hpp  networksystem_dll.rs  offsets.cs  offsets.hpp  offsets.rs  panorama_dll.cs  panorama_dll.hpp  panorama_dll.rs  particles_dll.cs  particles_dll.hpp  particles_dll.rs  pulse_system_dll.cs  pulse_system_dll.hpp  pulse_system_dll.rs  rendersystemdx11_dll.cs  rendersystemdx11_dll.hpp  rendersystemdx11_dll.rs  (+21 more)
sdk/include/source2sdk/animationsystem/: HSequence.hpp  RagdollPoseControl.hpp
sdk/include/source2sdk/animgraphlib/: AnimValueSource.hpp  CAddUpdateNode.hpp  CAimCameraUpdateNode.hpp  CAimMatrixUpdateNode.hpp  CBinaryUpdateNode.hpp  CBlendUpdateNode.hpp  (+44 more)
structs/: BoneIndex.h  CCSGOInput.hpp  CGameTraceManager.hpp  CInButtonState.hpp  CUserCmd.hpp  GameTrace.hpp  TraceFilter.hpp
(+1324 files in other folders)
